--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,9 @@ dj-database-url==0.5.0
 Django==4.0.2
 django-extensions==3.1.5
 django-heroku==0.3.1
+djangorestframework==3.13.1
 gunicorn==20.1.0
 psycopg2==2.9.3
+pytz==2021.3
 sqlparse==0.4.2
 whitenoise==5.3.0
